[metadata]
name = line-notify
version = attr:line_notify.VERSION
description = Line message Notifier
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-2
author = Alt
author_email = alt.no.rock@gmail.com
classifiers =
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
package_dir =
    =src
packages = find:
install_requires = requests
tests_require = pytest

[options.packages.find]
where = src

[options.entry_points]
console_scripts = line_notify = line_notify.util:main
